force-app/main/default/objects/TTS_Protection_Litigation__c/TTS_Protection_Litigation__c.object-meta.xml
<CustomObject>
    <description>The Protection Litigation object tracks legal proceedings for a Protection record, including parties, court references, dates, damages, settlement, outcome, and appeal status. Commonly used for patent, trademark, copyright, and trade secret disputes.</description>
    <label>Protection Litigation</label>
    <nameField>
        <displayFormat>LIT{00000}</displayFormat>
        <label>Litigation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Protection Litigations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>