force-app/main/default/objects/TTS_Protection_Litigation__c/fields/Appeal_Status__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Status__c</fullName>
    <description>Records the status of any appeal arising from the litigation.</description>
    <inlineHelpText>Select the current appeal status when the case outcome has been challenged.</inlineHelpText>
    <label>Appeal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appeal filed</fullName>
            </value>
            <value>
                <fullName>Appeal pending</fullName>
            </value>
            <value>
                <fullName>Appeal granted</fullName>
            </value>
            <value>
                <fullName>Appeal denied</fullName>
            </value>
            <value>
                <fullName>Appeal withdrawn</fullName>
            </value>
            <value>
                <fullName>New trial ordered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>