force-app/main/default/objects/TTS_Protection_Litigation__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the plaintiff to an Applicant record associated with the protection.</description>
    <inlineHelpText>Select the related applicant when the plaintiff is already represented by an Applicant record.</inlineHelpText>
    <label>Plaintiff</label>
    <referenceTo>TTS_Applicant__c</referenceTo>
    <relationshipLabel>Protection Litigations</relationshipLabel>
    <relationshipName>Protection_Litigations</relationshipName>
    <type>Lookup</type>
</CustomField>