force-app/main/default/objects/TTS_Protection_Litigation__c/fields/Case_Number_Reference__c.field-meta.xml
<CustomField>
    <fullName>Case_Number_Reference__c</fullName>
    <description>Stores the court-assigned case number or other official proceeding reference.</description>
    <inlineHelpText>Enter the official court case number or proceeding reference.</inlineHelpText>
    <label>Case Number/Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>