force-app/main/default/objects/TTS_Protection_Litigation__c/fields/Case_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Case_Outcome__c</fullName>
    <description>Records the principal outcome or resolution of the litigation.</description>
    <inlineHelpText>Select the case's principal outcome, such as settlement, dismissal, injunction, judgment, license, or appeal.</inlineHelpText>
    <label>Case Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Appeal</fullName>
            </value>
            <value>
                <fullName>Dismissal</fullName>
            </value>
            <value>
                <fullName>Injunction</fullName>
            </value>
            <value>
                <fullName>Judgment for defendant</fullName>
            </value>
            <value>
                <fullName>Judgment for plaintiff</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>Settlement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>