force-app/main/default/objects/TTS_Protection_Litigation__c/fields/Court__c.field-meta.xml
<CustomField>
    <fullName>Court__c</fullName>
    <description>Identifies the court or tribunal where the litigation was filed.</description>
    <inlineHelpText>Enter the full name of the court or tribunal handling the case.</inlineHelpText>
    <label>Court</label>
    <length>244</length>
    <type>Text</type>
</CustomField>