force-app/main/default/objects/TTS_Protection_Litigation__c/fields/Damages_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Damages_Awarded__c</fullName>
    <description>Stores the monetary damages awarded by the court or tribunal.</description>
    <inlineHelpText>Enter the total monetary damages awarded in the final decision.</inlineHelpText>
    <label>Damages Awarded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>