force-app/main/default/objects/TTS_Protection_Litigation__c/fields/Damages_Sought__c.field-meta.xml
<CustomField>
    <fullName>Damages_Sought__c</fullName>
    <description>Stores the monetary damages requested by the claimant in the litigation.</description>
    <inlineHelpText>Enter the total monetary damages being sought in the case.</inlineHelpText>
    <label>Damages Sought</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>