force-app/main/default/objects/TTS_Protection_Litigation__c/fields/Defendant__c.field-meta.xml
<CustomField>
    <fullName>Defendant__c</fullName>
    <description>Stores the name of the defendant in the litigation.</description>
    <inlineHelpText>Enter the defendant's name as shown in the court record.</inlineHelpText>
    <label>Defendant</label>
    <length>244</length>
    <type>Text</type>
</CustomField>