force-app/main/default/objects/TTS_Protection_Litigation__c/fields/Filing_Date__c.field-meta.xml
<CustomField>
    <fullName>Filing_Date__c</fullName>
    <description>Records the date on which the litigation was filed.</description>
    <inlineHelpText>Enter the date the case was filed with the court or tribunal.</inlineHelpText>
    <label>Filing Date</label>
    <type>Date</type>
</CustomField>