force-app/main/default/objects/TTS_Protection_Litigation__c/fields/Plaintiff__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff__c</fullName>
    <description>Stores the name of the plaintiff in the litigation.</description>
    <inlineHelpText>Enter the plaintiff's name as shown in the court record.</inlineHelpText>
    <label>Plaintiff</label>
    <length>244</length>
    <type>Text</type>
</CustomField>