force-app/main/default/objects/TTS_Protection_Litigation__c/fields/Protection__c.field-meta.xml
<CustomField>
    <fullName>Protection__c</fullName>
    <description>Links the litigation event to its parent Protection record.</description>
    <inlineHelpText>Select the patent, trademark, copyright, or trade secret protection involved in this litigation.</inlineHelpText>
    <label>Protection</label>
    <referenceTo>TTS_Protection__c</referenceTo>
    <relationshipLabel>Protection Litigations</relationshipLabel>
    <relationshipName>Protection_Litigations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>