force-app/main/default/objects/TTS_Protection_Litigation__c/fields/Settlement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Amount__c</fullName>
    <description>Stores the monetary amount agreed as part of the litigation settlement.</description>
    <inlineHelpText>Enter the total monetary amount agreed in the settlement.</inlineHelpText>
    <label>Settlement Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>