force-app/main/default/objects/TTS_Protection_Litigation__c/fields/Settlement_Date__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Date__c</fullName>
    <description>Records the date on which the litigation was settled.</description>
    <inlineHelpText>Enter the date the parties reached or finalized the settlement.</inlineHelpText>
    <label>Settlement Date</label>
    <type>Date</type>
</CustomField>