force-app/main/default/objects/TTS_Protection_Litigation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Records the current procedural stage or status of the litigation.</description>
    <inlineHelpText>Select the case's current stage, from complaint filing through verdict, settlement, dismissal, or appeal.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Answer filed</fullName>
            </value>
            <value>
                <fullName>Appeal</fullName>
            </value>
            <value>
                <fullName>Complaint filed</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Dismissed</fullName>
            </value>
            <value>
                <fullName>Pre-trial</fullName>
            </value>
            <value>
                <fullName>Settlement</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>Verdict</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>