force-app/main/default/objects/TTS_Protection_Litigation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Categorizes the litigation by the intellectual property right and alleged infringement.</description>
    <inlineHelpText>Select the type of intellectual property dispute involved in the case.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Copyright infringement</fullName>
            </value>
            <value>
                <fullName>Patent infringement</fullName>
            </value>
            <value>
                <fullName>Trademark infringement</fullName>
            </value>
            <value>
                <fullName>Trade secret misappropriation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>